@@ -2,7 +2,7 @@
 
 # Resource object code
 #
-# Created: lun oct 1 23:08:03 2012
+# Created: dom oct 14 00:45:43 2012
 #      by: The Resource Compiler for PyQt (Qt v4.8.2)
 #
 # WARNING! All changes made in this file will be lost!
